@@ -2,6 +2,8 @@ Release 1.3-SNAPSHOT
 * History buffer numbers are now numbered oldest to newest, so that 
   the buffer number for a given buffer will not change until the 
   session ends or the buffer is removed from history.
+* Added ${querytime} configuration property to suppress display of
+  query timing information. 
 
 Release 1.2
 * Added new mechanism to \connect to allow a logical name to be assigned
